feat:adicional funcionalidade

--- a/pages/home/index.css
+++ b/pages/home/index.css
@@ -215,6 +215,7 @@ header {
     #divContent {
         display: flex;
         flex-direction: column;
+        height: 631px;
     }
 
     .enterpriseName {
