--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -12,7 +12,7 @@
     --color-white: #FFFFFF;
     --color-blue: #4200FF;
     --color-black: #000000;
-    --color-red: #FFFFFF;
+    --color-red: #CE4646;
     --color-green: #4BA036;
     --font-size-1: 2.5rem;
     --font-size-2: 1.75rem;
