--- a/pages/login/index.css
+++ b/pages/login/index.css
@@ -32,6 +32,7 @@ header {
 
 }
 
+
 #divImg {
     display: none;
 }
@@ -203,6 +204,14 @@ a{
 
     input{
         height: 50px;
+    }
+
+    .loginP{
+        display: flex;
+        flex-direction: column;
+        align-items: baseline;
+        justify-content: center;
+        padding-right: 140px;
     }
 
 }
