--- a/pages/userPage/index.css
+++ b/pages/userPage/index.css
@@ -1,4 +1,4 @@
-main{
+main {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -6,7 +6,7 @@ main{
     width: 100vw;
 }
 
-header{
+header {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -16,18 +16,18 @@ header{
     height: 80px;
 }
 
-.headerLogo{
+.headerLogo {
     display: flex;
     align-items: center;
     gap: 10px;
 }
 
-#title{
+#title {
     color: var(--color-black);
     font-weight: 700;
 }
 
-#logout{
+#logout {
     text-decoration: none;
     border: 1px solid var(--color-blue);
     color: var(--color-blue);
@@ -40,56 +40,61 @@ header{
     font-size: var(--font-size-4);
 }
 
-#sectionUser{
+#sectionUser {
     margin-top: 30px;
     width: 55%;
     height: 100px;
     display: flex;
+    align-items: baseline;
     justify-content: center;
-    align-items: center;
     flex-direction: column;
     border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 15px;
 }
 
-.userName{
-    padding-right: 900px;
+.userName {
     font-weight: 700;
+    display: flex;
+    align-items: baseline;
+    justify-content: first baseline;
+    width: 100%;
     font-size: var(--font-size-2);
 }
 
-.divInfo{
+.divInfo {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    gap: 218px;
+    width: 100%;
+    
 }
 
-.email{
+.email {
     font-size: var(--font-size-4);
     font-weight: 400;
 }
 
-.capitalize{
+.capitalize {
     text-transform: capitalize;
     font-size: var(--font-size-4);
     font-weight: 400;
 
 }
 
-.work{
+.work {
     text-transform: capitalize;
     font-weight: 400;
     font-size: var(--font-size-4);
 }
 
 
-.editUser{
+.editUser {
     display: flex;
     margin-bottom: 25px;
     cursor: pointer;
 }
 
-#sectionJob{
+#sectionJob {
     margin-top: 40px;
     width: 55%;
     border: 1px solid #A8A8A8;
@@ -97,11 +102,69 @@ header{
     align-items: center;
     justify-content: center;
     background-color: #F8F8F8;
-    height: 500px;
+    flex-direction: column;
 }
 
 
-#noJob{
+#noJob {
     font-weight: 700;
     font-size: var(--font-size-1);
+}
+
+.hidden {
+    /* visibility: hidden; */
+    /* display: none; */
+}
+
+.divNameJob {
+    display: flex;
+    background-color: var(--color-blue);
+    width: 100%;
+    height: 80px;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+}
+
+.names {
+    color: var(--color-white);
+    font-size: var(--font-size-1);
+    font-weight: 700;
+}
+
+ul {
+    display: flex;
+    list-style: none;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 20px;
+    gap: 15px;
+    margin: 35px;
+
+}
+
+li {
+    width: 300px;
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+    flex-direction: column;
+    gap: 15px;
+    padding-left: 15px;
+    padding-top: 5px;
+    border: 1px solid var(--color-blue);
+    height: 80px;
+    background-color: var(--color-white);
+    text-transform: capitalize;
+}
+
+.nameCoworker{
+    font-size: var(--font-size-3);
+    font-weight: 700;
+}
+
+.level{
+    font-size: var(--font-size-3);
+    font-weight: 400;
 }
