--- a/pages/adminPage/index.css
+++ b/pages/adminPage/index.css
@@ -120,12 +120,14 @@ li{
     font-weight: 700;
     font-size: var(--font-size-3);
     margin-bottom: 5px;
+    text-transform: capitalize;
 }
 
 .descriptionDepartments{
     font-size: var(--font-size-4);
     font-weight: 400;
     margin-bottom: 5px;
+    text-transform: capitalize;
 }
 
 .nameCompany{
