--- a/styles/modal.css
+++ b/styles/modal.css
@@ -132,3 +132,80 @@
     height: 40px;
     cursor: pointer;
 }
+
+.formNewDepartments{
+    margin-top: 20px;
+    display: flex;
+    justify-content: baseline;
+    align-items: baseline;
+    flex-direction: column;
+    gap: 10px;
+}
+
+#newDepartment{
+    font-size: var(--font-size-1);
+    font-weight: 700;
+}
+
+.department{
+    width: 100%;
+    height: 50px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    padding-left: 10px;
+}
+
+.department::placeholder{
+    color: rgba(0, 0, 0, 0.5);
+}
+
+#selectNewDepart{
+    border-radius: 0%;
+    width: 100%;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    color: rgba(0, 0, 0, 0.5);
+    height: 50px;
+}
+
+#btnNewDepart{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--color-blue);
+    border: none;
+    color: var(--color-white);
+    height: 50px;
+    cursor: pointer;
+}
+
+.editDepartsForm{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.editDepartsTitle{
+    font-size: var(--font-size-1);
+    font-weight: 700;
+
+}
+
+.descriptionDepartContent{
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    height: 110px;
+    padding: 5px;
+    text-align: start;
+}
+
+.descriptionDepartContent::placeholder{
+    text-align: start;
+}
+
+.btnEditDepart{
+    cursor: pointer;
+    height: 50px;
+    color: var(--color-white);
+    border: none;
+    background-color: var(--color-blue);
+}
