--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -1,12 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap');
+
+
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
+textarea{
+    font-family: "Inter, sans-serif";
+}
+
+input{
+    font-family: "Inter, sans-serif";
+}
+
+a{
+    font-family: "Inter, sans-serif";
+}
+
 .none{
     visibility: hidden;
 }
+
+body {
+    
+    font-family: "Inter, sans-serif";
+  }
 
 :root {
     --color-white: #FFFFFF;
