--- a/styles/modal.css
+++ b/styles/modal.css
@@ -188,7 +188,6 @@
 .editDepartsTitle{
     font-size: var(--font-size-1);
     font-weight: 700;
-
 }
 
 .descriptionDepartContent{
@@ -208,4 +207,152 @@
     color: var(--color-white);
     border: none;
     background-color: var(--color-blue);
+}
+
+#formDel{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+#divMaster{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 25vw;
+    gap: 15px;
+}
+
+#confirmDelete{
+    font-size: var(--font-size-1);
+    font-weight: 700;
+    text-align: center;
+    flex-wrap: wrap;
+    line-height: 50px;
+}
+
+#btnDeleteDepart{
+    cursor: pointer;
+    background-color: var(--color-green);
+    color: var(--color-white);
+    width: 100%;
+    height: 50px;
+    border: none;
+}
+
+#modalViewDepart{
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+    gap: 10px;
+}
+
+#modalViewName{
+    font-size: var(--font-size-1);
+    font-weight: 700;
+    text-transform: capitalize;
+}
+
+#divMother{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#divUserForContract{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#depart-description{
+    text-transform: capitalize;
+    font-size: var(--font-size-2);
+    font-weight: 700;
+
+}
+
+#depart-selectUser{
+    border-radius: 0%;
+    color: rgba(0, 0, 0, 0.5);
+    border: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+#divEnterpriseBtn{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#wichEnterprise{
+    text-transform: capitalize;
+    font-size: var(--font-size-3);
+    font-weight: 400;
+}
+
+#btnContractOneUser{
+    color: var(--color-white);
+    background-color: var(--color-green);
+    border: none;
+    height: 50px;
+    width: 25%;
+    cursor: pointer;
+}
+
+#ulCoworkers{
+    overflow-x: scroll;
+    overflow-y: hidden;
+    background-color: #f8f8f8;
+    width: 100%;
+    height: 200px;
+    display: flex;
+    margin-left: 8%;
+    margin-top: 30px;
+    flex-direction: column;
+    padding-left: 10px;
+}
+
+
+#lisOfContract{
+    margin-top: 20px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+#nameOfUser{
+    text-transform: capitalize;
+    font-size: var(--font-size-4);
+    font-weight: 700;
+}
+
+.levelAndCompany{
+    font-size: var(--font-size-4);
+    font-weight: 400;
+    text-transform: capitalize;
+}
+
+#divBtn{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+#btnFired{
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid var(--color-red);
+    color: var(--color-red);
+    background-color: var(--color-white);
+    height: 30px;
+    margin-top: 10px;
 }
