--- a/styles/modal.css
+++ b/styles/modal.css
@@ -106,6 +106,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    width: 80%;
 }
 
 #editTitle {
@@ -300,7 +301,7 @@
     color: var(--color-white);
     background-color: var(--color-green);
     border: none;
-    height: 50px;
+    height: 40px;
     width: 25%;
     cursor: pointer;
 }
@@ -346,6 +347,7 @@
 }
 
 #btnFired{
+    cursor: pointer;
     width: 50%;
     display: flex;
     align-items: center;
