--- a/pages/home/index.css
+++ b/pages/home/index.css
@@ -201,6 +201,10 @@ ul{
         margin-top: 30px;
     }
 
+    ul{
+        margin-bottom: 30px;
+    }
+
     .enterprises{
         display: flex;
         flex-direction: column;
