--- a/styles/toasts.css
+++ b/styles/toasts.css
@@ -33,6 +33,10 @@
     background-color: var(--color-white);
 }
 
+.errorToast{
+    background-color: var(--color-red);
+}
+
 .toastContainer > div{
     padding: 10px;
     display: flex;
@@ -46,8 +50,19 @@
     font-size: var(--font-size-2);
 }
 
-.toastContainer > div > span{
+
+.spanOk{
     color: var(--color-green);
     font-size: var(--font-size-3);
 }
 
+.titleError{
+    color: var(--color-white);
+    font-weight: 500px;
+    font-size: var(--font-size-2);
+}
+
+.spanError{
+    font-size: var(--font-size-3);
+    color: var(--color-white);
+}
